--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "acrudjson"
 version = "0.1.0"
 description = "Modern Rustlang with async support for CRUD operation based on JSONRPC specification."
 authors = ["Sheldon Knuth <sheldon@abackbone.net>"]
-repository = "https://github.com/sheruost/async-jsonrpc/"
+repository = "https://github.com/sheruost/acrudjson/"
 license = "MIT"
 readme = "README.md"
 edition = "2021"
