--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,9 +20,10 @@ sled = "0.34.7"
 zerocopy = "0.7"
 
 [dev-dependencies]
+anyhow = "1"
 clap = "4.4"
 env_logger = "0.10"
-tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time"] }
+tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
 
 [[example]]
 name = "server"
