--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-astro-float = "0.7"
+bigdecimal = "0.4"
 crc32fast = "1"
 log = "0.4"
 thiserror = "1"
