--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
 name = "acrudjson"
-version = "0.1.1"
+version = "0.1.2"
 description = "Modern Rustlang with async support for CRUD operation based on JSONRPC specification."
 authors = ["Sheldon Knuth <sheldon@abackbone.net>"]
 repository = "https://github.com/sheruost/acrudjson"
 license = "Apache-2.0/MIT"
 readme = "README.md"
-rust = "1.61"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -23,7 +22,7 @@ zerocopy = "0.7"
 [dev-dependencies]
 anyhow = "1"
 env_logger = "0.10"
-tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
+tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
 
 [[example]]
 name = "server"
